{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 84,
  "lineage": "d03ec2ec-5c46-514c-ec45-9f37a25fc7a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-06fa7a610cfdcc809",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fa7a610cfdcc809",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0fee9d8ae21ee6e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074283f2a95b1e222",
            "association_id": "eipassoc-0c0a8ce18ee6f752a",
            "domain": "vpc",
            "id": "eipalloc-074283f2a95b1e222",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08abe80994323a077",
            "private_dns": "ip-10-0-0-72.ec2.internal",
            "private_ip": "10.0.0.72",
            "public_dns": "ec2-3-218-161-44.compute-1.amazonaws.com",
            "public_ip": "3.218.161.44",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cf04b436c94d7f7",
            "arn": "arn:aws:ec2:us-east-1:782863115905:instance/i-057f1c9f92ae40b55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057f1c9f92ae40b55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "robt-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010675d29cd4328d4",
            "private_dns": "ip-10-0-0-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.165",
            "public_dns": "ec2-34-230-3-236.compute-1.amazonaws.com",
            "public_ip": "34.230.3.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef495cacffa2a6c4",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6965af416d082bf",
            "tags": {
              "Name": "RobT-EC2"
            },
            "tags_all": {
              "Name": "RobT-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06fa7a610cfdcc809"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:internet-gateway/igw-0e35d42d1d858ef55",
            "id": "igw-0e35d42d1d858ef55",
            "owner_id": "782863115905",
            "tags": {
              "Name": "RobT-Internet-Gateway"
            },
            "tags_all": {
              "Name": "RobT-Internet-Gateway"
            },
            "vpc_id": "vpc-0fee9d8ae21ee6e36"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074283f2a95b1e222",
            "connectivity_type": "public",
            "id": "nat-0bdeba46cf14ca6af",
            "network_interface_id": "eni-08abe80994323a077",
            "private_ip": "10.0.0.72",
            "public_ip": "3.218.161.44",
            "subnet_id": "subnet-0d6965af416d082bf",
            "tags": {
              "Name": "RobT-NGW"
            },
            "tags_all": {
              "Name": "RobT-NGW"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e35d42d1d858ef55",
            "id": "r-rtb-0cc77a0bbc9b65db21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cc77a0bbc9b65db2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0542f2a7c717405991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bdeba46cf14ca6af",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0542f2a7c71740599",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.main_nat",
            "aws_route_table.route_table_local",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0542f2a7c71740599",
            "id": "rtb-0542f2a7c71740599",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bdeba46cf14ca6af",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RobT-Private-Route-Table"
            },
            "tags_all": {
              "Name": "RobT-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fee9d8ae21ee6e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0cc77a0bbc9b65db2",
            "id": "rtb-0cc77a0bbc9b65db2",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e35d42d1d858ef55",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RobT-Public-Route-Table"
            },
            "tags_all": {
              "Name": "RobT-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fee9d8ae21ee6e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "local_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a933eba5747ee312",
            "route_table_id": "rtb-0542f2a7c71740599",
            "subnet_id": "subnet-01ce885472a7f2197"
          },
          "dependencies": [
            "aws_route_table.route_table_local",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c51e2927ba0b35a",
            "route_table_id": "rtb-0542f2a7c71740599",
            "subnet_id": "subnet-08195cf004ffb5388"
          },
          "dependencies": [
            "aws_route_table.route_table_local",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd0c8027e280cf90",
            "route_table_id": "rtb-0cc77a0bbc9b65db2",
            "subnet_id": "subnet-0d6965af416d082bf"
          },
          "dependencies": [
            "aws_route_table.route_table_public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0f016b8f4c34484",
            "route_table_id": "rtb-0cc77a0bbc9b65db2",
            "subnet_id": "subnet-04e20a25a413609df"
          },
          "dependencies": [
            "aws_route_table.route_table_public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-01ce885472a7f2197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ce885472a7f2197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RobT-Private-us-east-1a"
            },
            "tags_all": {
              "Name": "RobT-Private-us-east-1a"
            },
            "vpc_id": "vpc-0fee9d8ae21ee6e36"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-08195cf004ffb5388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08195cf004ffb5388",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RobT-Private-us-east-1b"
            },
            "tags_all": {
              "Name": "RobT-Private-us-east-1b"
            },
            "vpc_id": "vpc-0fee9d8ae21ee6e36"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0d6965af416d082bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6965af416d082bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RobT-Public-us-east-1a"
            },
            "tags_all": {
              "Name": "RobT-Public-us-east-1a"
            },
            "vpc_id": "vpc-0fee9d8ae21ee6e36"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-04e20a25a413609df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e20a25a413609df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RobT-Public-us-east-1b"
            },
            "tags_all": {
              "Name": "RobT-Public-us-east-1b"
            },
            "vpc_id": "vpc-0fee9d8ae21ee6e36"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc/vpc-0fee9d8ae21ee6e36",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00622500b1d086970",
            "default_route_table_id": "rtb-07734aff0bbc2496f",
            "default_security_group_id": "sg-06fa7a610cfdcc809",
            "dhcp_options_id": "dopt-04b46d2964e3827c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fee9d8ae21ee6e36",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0be7e033ff6d3fd48",
            "ipv6_cidr_block": "2600:1f10:4fb2:9800::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07734aff0bbc2496f",
            "owner_id": "782863115905",
            "tags": {
              "Name": "RobT-VPC"
            },
            "tags_all": {
              "Name": "RobT-VPC"
            }
          }
        }
      ]
    }
  ]
}